--- a/public/index.html
+++ b/public/index.html
@@ -53,7 +53,7 @@ rel="stylesheet"
     }
   }
 </script>
-    <title>React App</title>
+    <title>Issue Finder</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
