Reorder scripts on index template and replace ripple.js script from node modules with cdn

--- a/public/index.html
+++ b/public/index.html
@@ -54,7 +54,11 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+    <script src="./TW-ELEMENTS-PATH/dist/js/index.min.js" type="text/css"></script>
     <script src="https://cdn.tailwindcss.com"></script>
+    <script src="https://unpkg.com/@material-tailwind/html@latest/scripts/select.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/choices.js/public/assets/scripts/choices.min.js"></script>
+    <script src="https://unpkg.com/@material-tailwind/html@latest/scripts/ripple.js"></script>
     <script>
       tailwind.config = {
         theme: {
@@ -66,8 +70,5 @@
         }
       }
     </script>
-    <script src="https://unpkg.com/@material-tailwind/html@latest/scripts/select.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/choices.js/public/assets/scripts/choices.min.js"></script>
-    <script src="https://unpkg.com/@material-tailwind/html@latest/scripts/ripple.js"></script>
   </body>
 </html>
