fixes output.css not found error in production

--- a/public/index.html
+++ b/public/index.html
@@ -37,7 +37,7 @@
       href="https://unpkg.com/@material-tailwind/html@latest/styles/material-tailwind.css"
       rel="stylesheet"
     />
-    <link href="/src/output.css" rel="stylesheet">
+    <link href="%PUBLIC_URL%/output.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/tw-elements/dist/css/index.min.css" />
     <title>Issue Finder</title>
   </head>
