--- a/public/index.html
+++ b/public/index.html
@@ -39,7 +39,7 @@
     />
     <link href="%PUBLIC_URL%/output.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/tw-elements/dist/css/index.min.css" />
-    <title>Issue Finder</title>
+    <title><h1>Issue</h1> Finder</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
