fix: #28 Disable Tailwind Preflight enabling default heading tags styles

--- a/public/index.html
+++ b/public/index.html
@@ -61,6 +61,9 @@
     <script src="https://unpkg.com/@material-tailwind/html@latest/scripts/ripple.js"></script>
     <script>
       tailwind.config = {
+        corePlugins: {
+          preflight: false
+        },
         theme: {
           extend: {
             fontFamily: {
